<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/SSTA"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="108dp"
        android:layout_marginBottom="325dp"
        android:text="@string/STA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SSFA1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="134dp"
        android:background="@color/design_default_color_error"
        android:text="@string/SAD"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SSTA" />

    <Button
        android:id="@+id/SSFA1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="58dp"
        android:text="@string/SFA"
        app:layout_constraintBottom_toTopOf="@+id/SSTA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>