<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <Button
        android:id="@+id/TSSA"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="112dp"
        android:text="@string/SSA"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TSFA1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="142dp"
        android:background="@color/design_default_color_secondary_variant"
        android:text="@string/TAD"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TSSA" />

    <Button
        android:id="@+id/TSFA1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="311dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="20dp"
        android:text="@string/SFA"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/TSSA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>